--- a/EDA Clickbait.ipynb
+++ b/EDA Clickbait.ipynb
@@ -1191,6 +1191,84 @@
    "source": [
     "fusion_df.columns"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Text Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from spacy.lang.id import Indonesian\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "lemmatizer = Indonesian()\n",
+    "file=open('data/stopwords_id.txt')\n",
+    "text=file.read()\n",
+    "stops=set(text.split())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing 1 (Stopword Not Removed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#punctuation dan angka\n",
+    "fusion_df['p_title']=fusion_df.p_title.apply(lambda x:re.sub(r'[^\\w]',' ',x))\n",
+    "fusion_df['p_title']=fusion_df.p_title.apply(lambda x:re.sub(r'[0-9]',' ',x))\n",
+    "def preprocessing(t,stops = set()):\n",
+    "    listKata = lemmatizer(t.lower().strip())\n",
+    "    cleanList = []\n",
+    "    for token in word_tokenize(str(listKata)):\n",
+    "        cleanList.append(str(token))\n",
+    "    t = ' '.join(cleanList)\n",
+    "    return t\n",
+    "for i,j in tqdm(enumerate(fusion_df['p_title'])):\n",
+    "    fusion_df['p_title'][i]=preprocessing(fusion_df['p_title'][i])\n",
+    "fusion_df.to_csv(\"preprocessing_1.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing 2 (Stopword Removed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#punctuation dan angka\n",
+    "fusion_df['p_title']=fusion_df.p_title.apply(lambda x:re.sub(r'[^\\w]',' ',x))\n",
+    "fusion_df['p_title']=fusion_df.p_title.apply(lambda x:re.sub(r'[0-9]',' ',x))\n",
+    "def preprocessing(t,stops = set()):\n",
+    "    listKata = lemmatizer(t.lower().strip())\n",
+    "    cleanList = []\n",
+    "    for token in word_tokenize(str(listKata)):\n",
+    "        if token not in stops:\n",
+    "            cleanList.append(str(token))\n",
+    "    t = ' '.join(cleanList)\n",
+    "    return t\n",
+    "for i,j in tqdm(enumerate(fusion_df['p_title'])):\n",
+    "    fusion_df['p_title'][i]=preprocessing(fusion_df['p_title'][i])\n",
+    "fusion_df.to_csv(\"preprocessing_2.csv\")"
+   ]
   }
  ],
  "metadata": {
